dsEeprom - a library that provides extended 
         - access to the internal EEPROM
============================================
dsEeprom 0.9.1 / 10/29/2016
 * Initial upload
=========================================
dsEeprom 0.9.2 / 11/10/2016
 * fixed bug in restore raw
=========================================
dsEeprom 0.9.3 / 11/11/2016
 * added loggin initialisation
=========================================