@@ -10,3 +10,6 @@ dsEeprom 0.9.2 / 11/10/2016
 dsEeprom 0.9.3 / 11/11/2016
  * added loggin initialisation
 =========================================
+dsEeprom 0.9.4 / 08/25/201z
+ * removed implicit use of SimpleLog
+=========================================
